[package]
name = "winwait"
version = "0.1.0"
authors = ["Andy Bao <contact@andybao.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["tlhelp32", "winnt", "handleapi", "minwindef"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"